--- a/style.css
+++ b/style.css
@@ -2,3 +2,16 @@
     color:aqua;
     background-color: green;
 }
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.card{
+    width: 20%;
+    margin: 1px;
+}
+.card img{
+    width: 100%;
+}
